@@ -1,3 +1,4 @@
+#filter substitution
 fennec (@MOZ_APP_VERSION@)  unstable; urgency=low
 
   * Mozilla Nightly (Closes: #nnnn)  <nnnn is the bug number of your ITP>
